--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "p": "^0.2.0",
     "redis": "^5.8.2",
     "reflect-metadata": "^0.2.2",
+    "slugify": "^1.6.6",
     "type-graphql": "^2.0.0-rc.2"
   }
 }
