--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,8 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "dist/index.js",
-        "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
+        "dest": "/dist/index.js"
       }
     ]
   }
+  
